<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Schulportal</string>
    <string name="title_overview">Overview</string>
    <string name="title_courses">Your Courses</string>
    <string name="title_messages">Messages</string>
    <string name="title_explore">Explore</string>
    <string name="url_login" translatable="false">https://login.schulportal.hessen.de/</string>
    <string name="url_course_overview" translatable="false">https://start.schulportal.hessen.de/meinunterricht.php?a=sus_view&amp;id=%numberid</string>
    <string name="url_course_overview_semester" translatable="false">https://start.schulportal.hessen.de/meinunterricht.php?a=sus_view&amp;id=%numberid&amp;halb=%semester</string>
    <string name="url_start" translatable="false">https://start.schulportal.hessen.de/</string>
    <string name="url_timetable" translatable="false">https://start.schulportal.hessen.de/stundenplan.php</string>
    <string name="url_calendar" translatable="false">https://start.schulportal.hessen.de/kalender.php?a=export&amp;export=csv&amp;year=%yr</string>
    <string name="url_studygroups" translatable="false">https://start.schulportal.hessen.de/lerngruppen.php</string>
    <string name="url_mycourses" translatable="false">https://start.schulportal.hessen.de/meinunterricht.php</string>
    <string name="url_changes" translatable="false">https://start.schulportal.hessen.de/vertretungsplan.php</string>
    <string name="url_changes_debug" translatable="false">https://gist.githubusercontent.com/koenidv/7c0b35895d1daf86b2b00f243d687fe2/raw/13d8feb0b7216d8278f9421a06a2eeba305f4525/gistfile1.txt</string>
    <string name="url_messages" translatable="false">https://start.schulportal.hessen.de/nachrichten.php</string>
    <string name="url_holidays" translatable="false">https://ferien-api.de/api/v1/holidays/HE.json</string>
    <string name="url_bank_holidays" translatable="false">https://feiertage-api.de/api/?jahr=%hldyYear&amp;nur_land=HE</string>
    <string name="url_cryption_publickey" translatable="false">https://start.schulportal.hessen.de/ajax.php?f=rsaPublicKey</string>
    <string name="url_cryption_handshake" translatable="false">https://start.schulportal.hessen.de/ajax.php?f=rsaHandshake&amp;s=%s</string>
    <string name="url_status" translatable="false">https://info.schulportal.hessen.de/</string>
    <string name="url_web_debugger" translatable="false">https://koenidv.github.io/sph-planner/debugger#%s</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="remove">Remove</string>
    <string name="not_now">Not now</string>
    <string name="continuenow">Continue</string>
    <string name="error">Error</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="understood">Alright</string>
    <string name="load_more">Show more</string>
    <string name="retry">Retry</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="emoji_check" translatable="false">✔</string>
    <string name="emoji_cross" translatable="false">❌</string>
    <string name="emoji_cross_bw" translatable="false">✖️</string>
    <string name="emoji_warning" translatable="false">❗</string>
    <string name="emoji_print" translatable="false">🖨️</string>
    <string name="error_offline">No connection</string>
    <string name="error_maintenance">Maintenance, try again later</string>
    <string name="error_server">Try again in a few minutes</string>
    <string name="error_credentials">Please check your credentials.</string>
    <string name="error_unknown">Something went wrong.\nPlease try again.</string>
    <string name="sph_status">Status</string>
    <string name="index_status_userid">Collecting some information…</string>
    <string name="index_status_courses">Looking for course information…</string>
    <string name="index_status_timetable">Memorizing your timetable…</string>
    <string name="index_status_posts">Reading all posts…</string>
    <string name="index_status_changes">Checking for changes…</string>
    <string name="index_status_messages">Getting your messages…</string>
    <string name="index_status_users">Finding your teachers…</string>
    <string name="index_status_holidays">Searching for holidays…</string>
    <string name="index_status_calendar">Searching for calendar entries…</string>
    <string name="upgrading_messages">Loading messages. This might take a while.</string>
    <string name="onboard_legal_title">Before we start</string>
    <string name="onboard_legal_description">You should know a few things so that we\'ll along well 😊</string>
    <string name="onboard_legal_liability">I know that the app is not liable for any data shown and any mistake made.</string>
    <string name="onboard_legal_sources">I understand that all data is provided by Schulportal Hessen and courtesy of the respective author.</string>
    <string name="onboard_legal_privacy">I have read and understood and agree to the app\'s <a href="https://koeni.dev/sph/datenschutz">privacy policy</a>.</string>
    <string name="onboard_welcome_title">Hey</string>
    <string name="onboard_welcome_description">"You need an account with Hesse's education portal to use this app."</string>
    <string name="onboard_welcome_error_connection">You need to be online to sign in.\nTap to retry.</string>
    <string name="onboard_welcome_error_maintenance">The education portal is currently under maintenance.\nTap to recheck.</string>
    <string name="onboard_select_school">Select your school</string>
    <string name="onboard_username">User (firstname.lastname)</string>
    <string name="onboard_password">Password</string>
    <string name="onboard_signin">Login</string>
    <string name="onbaord_use_demodata">Use demo data</string>
    <string name="onboard_signin_info_wrong_credentials">Your credentials don\'t seem to be valid anymore.\nPlease sign in again.</string>
    <string name="onboard_signin_error_network">Please check your network connection and retry.</string>
    <string name="onboard_signin_error_credentials">Please check your credentials.</string>
    <string name="onboard_signin_error_maintenance">The education portal is currently under maintenance.\nPlease try again later.</string>
    <string name="onboard_signin_error_server">A server error occurred.\nPlease try again in a few minutes.</string>
    <string name="onboard_signin_error_unknown">Something went wrong.\nPlease try again.</string>
    <string name="onboard_supported_schooltested">✔ We tested the app with your school and it should work.</string>
    <string name="onboard_supported_features_full">"✔ Your school supports all the features we need, but we didn't test it yet.\nPlease contact us if you encounter any issues!"</string>
    <string name="onboard_supported_features_partly_manual">✔ Your school supports some of the features we need, but you will need to enter some data manually.</string>
    <string name="onboard_supported_features_partly_hidden">✔ Your school supports some of the features we need.</string>
    <string name="onboard_supported_features_partly_not">❌ Your school does not support all the features we need. Please get in touch to see how you can help us support your school!</string>
    <string name="onboard_supported_features_none">❌ Sorry, your school does not support the features we need to work.</string>
    <string name="onboard_supported_featurelist">%mycourses My Courses\n%studygroups Study Groups\n%timetable Timetable\n%changes Changes\n%messages Messages \n%calendar Calendar</string>
    <string name="onboard_supported_warning">Please report any issues you might experience via the options menu!</string>
    <string name="onboard_supported_error_network">There was a network error.\nTap to retry.</string>
    <string name="onboard_supported_error_maintenance">The education portal is currently under maintenance.\nTap to retry.</string>
    <string name="onboard_supported_error_server">A server error occurred.\nPlease try again in a few minutes.</string>
    <string name="onboard_token">Cannot authorize token, no credentials provided</string>
    <string name="onboard_supported_error_unknown">Something went wrong.\nTap to retry.</string>
    <string name="greeting_general">Hey %name</string>
    <string name="greeting_morning">Good morning, %name</string>
    <string name="greeting_evening">Good evening, %name</string>
    <string name="greeting_night">Sleep well, %name</string>
    <string name="greeting_friday_weekend">Weekend\'s coming up!</string>
    <string name="greeting_random_general_1">How are you doing?</string>
    <string name="greeting_random_general_2">Good to see you again!</string>
    <string name="greeting_random_general_3">Naa?</string>
    <string name="greeting_random_morning_1">Have a great day!</string>
    <string name="greeting_random_morning_2">What are your plans today?</string>
    <string name="greeting_random_evening_1">How was day, %name?</string>
    <string name="posts_filter_read">Is read?</string>
    <string name="posts_filter_read_read">Read</string>
    <string name="posts_filter_read_unread">Unread</string>
    <string name="posts_filter_task">Contains a task?</string>
    <string name="posts_filter_task_none">None</string>
    <string name="posts_filter_task_any">Any</string>
    <string name="posts_filter_task_undone">Undone</string>
    <string name="posts_filter_task_done">Done</string>
    <string name="tasks_sync_info">If you check a task here, it will also be updated it in the education portal.\n\nIt might take a few minutes for the changes to reflect there.</string>
    <string name="attachments_options_open">Open</string>
    <string name="attachments_options_download">Download</string>
    <string name="attachments_options_delete">Remove from device</string>
    <string name="attachments_options_pin">Pin</string>
    <string name="attachments_options_unpin">Unpin</string>
    <string name="attachments_options_rename">Rename</string>
    <string name="attachments_options_share">Share</string>
    <string name="email_template_hint">Your school\'s address template</string>
    <string name="email_template_chip_fname">First char of first name</string>
    <string name="email_template_chip_firstname">First name</string>
    <string name="email_template_chip_lname">First 3 chars of last name</string>
    <string name="email_template_chip_lastname">Last name</string>
    <string name="email_template_chip_abbr">Abbreviation</string>
    <string name="email_template_chip_id">Identifier</string>
    <string name="menu_option_theme_light">Light</string>
    <string name="menu_option_theme_dark">Dark</string>
    <string name="menu_option_theme_system">System</string>
    <string name="menu_option_accent_electric">Spring</string>
    <string name="menu_option_accent_summer">Summer</string>
    <string name="menu_option_accent_autumn">Autumn</string>
    <string name="menu_option_accent_monochrome">Winter</string>
    <string name="debugger_switch">Record debug log</string>
    <string name="debugger_view">View log</string>
    <string name="debugger_share">Share log</string>
    <string name="debugger_description">The debug log logs what the app is doing and can help understand issues. It does not contain very personal data.</string>
    <string name="debug_database_export">Export database</string>
    <string name="debug_database_description">The database contains all data the app crawled from SPH. It does not contain your credentials or session token.</string>
    <string name="debug_token_share">Share session token</string>
    <string name="debug_token_description">By sharing your session token, you can grant temporary access to SPH without sharing your credentials. It must be used within 15 minutes.</string>
    <string name="imagedescr_info">Illustration</string>
</resources>