<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/unreadTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/posts_filter_read"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/readToggleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectionRequired="false"
            app:singleSelection="true">

            <Button
                android:id="@+id/filterIsReadButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/posts_filter_read_read" />

            <Button
                android:id="@+id/filterIsUnreadButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/posts_filter_read_unread" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/taskTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_slab"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/posts_filter_task"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/taskToggleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectionRequired="false"
            app:singleSelection="true">

            <Button
                android:id="@+id/filterTaskNoneButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/posts_filter_task_none" />

            <Button
                android:id="@+id/filterTaskAnyButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/posts_filter_task_any" />

            <Button
                android:id="@+id/filterTaskUndoneButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/posts_filter_task_undone" />

            <Button
                android:id="@+id/filterTaskDoneButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/posts_filter_task_done" />

        </com.google.android.material.button.MaterialButtonToggleGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/doneButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>