<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:paddingTop="16dp">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/darkmodeToggleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/themeDarkButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_option_theme_dark" />

            <Button
                android:id="@+id/themeLightButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_option_theme_light" />

            <Button
                android:id="@+id/themeSystemButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_option_theme_system" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/accentToggleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/accentElectricButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_option_accent_electric"
                android:textColor="@color/purple_500" />

            <Button
                android:id="@+id/accentSummerButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/orange_a400"
                android:text="@string/menu_option_accent_summer" />

            <Button
                android:id="@+id/accentAutumnButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/pink_a400"
                android:text="@string/menu_option_accent_autumn" />

            <Button
                android:id="@+id/accentMonochromeButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_option_accent_monochrome" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doneButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>