<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/openTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/attachments_options_open"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_open"
        app:drawableTint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/downloadTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/attachments_options_download"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_download"
        app:drawableTint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/deleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/attachments_options_delete"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_delete"
        app:drawableTint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/pinTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/attachments_options_pin"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_pin"
        app:drawableTint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/unpinTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/attachments_options_unpin"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_unpin"
        app:drawableTint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/renameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/attachments_options_rename"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_edit"
        app:drawableTint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/shareTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/attachments_options_share"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_send"
        app:drawableTint="?attr/colorOnSurface" />

</LinearLayout>