<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/infoImageView"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/imagedescr_info"
            android:maxHeight="128dp"
            tools:srcCompat="@drawable/img_taskssync" />

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            tools:text="@string/tasks_sync_info" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doneButton"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:backgroundTint="?attr/colorPrimary"
            android:paddingEnd="48dp"
            android:paddingStart="48dp"
            android:text="@string/understood"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="?attr/colorOnPrimarySurface" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>